--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
@@ -7,6 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-theme="crimson">
-		<div class="h-full overflow-x-hidden">%sveltekit.body%</div>
+		<div class="h-full overflow-x-hidden relative">%sveltekit.body%</div>
 	</body>
 </html>
