fix: Prettier formatting

--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-theme="crimson" class="h-screen">
-		<div class="contents">
-		%sveltekit.body%
-		</div>
+		<div class="contents">%sveltekit.body%</div>
 	</body>
 </html>
